@@ -2,3 +2,10 @@
 A simple Java-console based program that converts a digit to its Roman Numeral equivalent and or vice versa.
 
 
+## How to execute
+
+You can either choose to compile the classes on your own or utilized the provided **jar** file.
+To execute the provided **jar** file, you must first download it and once done you can put it in a
+folder and via terminal you can supply this command:
+
+**java --module-path . --add-modules com.romannumerals -m com.romannumerals/com.romannumerals.Main**
